Corrected spacing for the header

--- a/style.css
+++ b/style.css
@@ -43,13 +43,17 @@ p {
 }
 
 /* Header */
-header {
+.header-wrapper {
   width: 100vw;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom:10px;
 }
 
+header {
+  max-width: 1100px;
+  height: 57px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
 
 .logo {
   min-width: 350px;
@@ -57,19 +61,23 @@ header {
 }
 
 .sub-button {
-  background-color: #61AD39;
+  background-color: #61ad39;
   padding: 7px;
   color: white;
-  min-width:240px;
-  min-height:46.66;
+  min-width: 240px;
+  min-height: 46.66;
   flex: 0 0 240px;
 }
 
-
 /* Nav bar */
 navbar {
-  margin: 
+  display: flex;
   width: 100vw;
+  justify-content: center;
+}
+
+.nav-sections > div {
+  display: inline-block;
 }
 
 .nav-item1 {
